# Cadavre-exquis

./: .gitignore  README.md  gitignore  main.py  pyproject.toml  resources.py
data/confs/char_level/: 01_02-02-21.json  02_04-02-21.json  03_05-02-21.json  04_06-02-21.json  template_conf.json
data/confs/char_level_model/: template_conf.json
data/confs/word_level/: 01_07-02-21.json  template_conf.json
data/encoders/char_encoders/fairytales/: char2int.json  int2char.json
data/encoders/char_encoders/gutenberg/: char2int.json  int2char.json
data/encoders/word_encoders/fairytales/: int2word.json  word2int.json
data/text_samples/: don_quixote.txt
src/utils/: file_utils.py
src/writing/: encoding.py  lstm_model.py  model_generator.py  train.py
src/writing/char_level_model/: encoding.py  lstm_model.py  model_generator.py  train.py
tests/writing/: test_encoding.py  test_model_generator.py
