[tool.poetry]
name = "cadavre exquis"
version = "0.1.0"
description = "Experimental project of cadavre exquis, a form of joint creation that can be done via drawing or via writing. The project aims at creating an interface where human and artificial agent can participate together at creating something new."
authors = ["Juliette <bourquinjuliette@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
