[tool.poetry]
name = "cadavre exquis"
version = "0.1.0"
description = ""
authors = ["Juliette <bourquinjuliette@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "1.19.2"
tensorflow = "^2.4.1"
typer = "^0.3.2"
nltk = "^3.5"
pydot = "^1.4.1"
Keras = "^2.4.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
